veeratube/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: youtube-ingress

spec:
  ingressClassName: nginx

  rules:
  - host: godavariportfolio.online

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: frontend-service

            port:
              number: 80
